# electronic_journal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: db_connection.py
app/migrations/versions/: 33474502d1bd_db_initial.py  341735c52a21_update_tabels.py
app/routers/: score_router.py  student_router.py
app/schemas/: score_schemas.py  student_schemas.py
src/: config_my.py  main.py
src/db/: db_connection.py  models.py
src/migrations/: env.py
src/migrations/versions/: 31599984b18d_autoincrement.py  5e687ac8b1e1_db_initial.py
src/repositories/: scores.py  students.py
src/routers/: dependencies.py  score_router.py  student_router.py
src/schemas/: score_schemas.py
src/services/: score_service.py  students_service.py
src/utils/: repository.py
